# weekly-dish

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
_old_linebot/: deploy.sh  main.py
_old_linebot/lib/: ingredients.py
app/: app.py  daily_dishes.py  register_dishes.py  weekly_dishes.py
app/lib/: cache.py  recipe.py  util.py
lib/: recipe.py  util.py
tests/: test_dishes.py  test_menu.py
